--- a/frotend/indexaddplac.html
+++ b/frotend/indexaddplac.html
@@ -106,7 +106,7 @@
             const deadline = deadlineInput.value || null; // Changed for null handling
 
             try {
-                const response = await fetch('http://localhost:3000/api/placements/add', {
+                const response = await fetch('https://ipu-site-backend.onrender.com/api/placements/add', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ plactype, placname, placdetail, placlink, deadline }),
